# CTSE_Assignment_2

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agents/: _parsing.py  classifier.py  coordinator.py  delegator.py  reproducer.py
core/: graph.py  llm.py  logger.py  state.py
data/: developers.json  golden_dataset.json
data/mock_codebase/: api.controller.ts  auth.service.ts  database.service.ts  payment.service.ts  search.controller.ts
tests/: conftest.py  llm_judge.py  test_classifier.py  test_coordinator.py  test_delegator.py  test_integration.py  test_reproducer.py
tools/: codebase_searcher.py  developer_lookup.py  github_fetcher.py  severity_scanner.py  slack_notifier.py
